src/test/ui/error-codes/E0302.stderr
error[E0302]: cannot assign in a pattern guard
  --> $DIR/E0302.rs:4:21
   |
LL |         option if { option = None; false } => { },
   |                     ^^^^^^^^^^^^^ assignment in pattern guard

error[E0384]: cannot assign twice to immutable variable `option`
  --> $DIR/E0302.rs:4:21
   |
LL |         option if { option = None; false } => { },
   |         ------      ^^^^^^^^^^^^^ cannot assign twice to immutable variable
   |         |
   |         first assignment to `option`

error: aborting due to 2 previous errors

Some errors occurred: E0302, E0384.
For more information about an error, try `rustc --explain E0302`.
